@@ -27,7 +27,11 @@
  * \file 
  * Contains the definitions for the emulated Typhoon Chipset devices.
  *
- * $Id: System.h,v 1.27 2008/02/26 16:00:31 iamcamiel Exp $
+ * $Id: System.h,v 1.28 2008/03/04 19:05:21 iamcamiel Exp $
+ *
+ * X-1.28       Camiel Vanderhoeven                             04-MAR-2008
+ *      Support some basic MP features. (CPUID read from C-Chip MISC 
+ *      register, inter-processor interrupts)
  *
  * X-1.27       Camiel Vanderhoeven                             26-FEB-2008
  *      Added CF8/CFC method for getting at PCI config space.
@@ -211,6 +215,7 @@ class CSystem
   void ResetMem(unsigned int membits);
 
   CAlphaCPU * get_cpu(int cpunum) { return acCPUs[cpunum]; };
+  int get_cpu_num() { return iNumCPUs; };
 
   virtual ~CSystem();
   unsigned int iNumMemoryBits;
@@ -230,7 +235,7 @@ class CSystem
 
 private:
 
-  u64 cchip_csr_read(u32 address);
+  u64 cchip_csr_read(u32 address, CSystemComponent * src);
   void cchip_csr_write(u32 address, u64 data);
   u64 pchip_csr_read(int num, u32 address);
   void pchip_csr_write(int num, u32 address, u64 data);
